# engine-q

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/nu-cli/: Cargo.toml
crates/nu-cli/src/: completions.rs  syntax_highlight.rs
crates/nu-color-config/src/: shape_color.rs
crates/nu-command/: Cargo.toml
crates/nu-command/src/: default_context.rs  example_test.rs  lib.rs
crates/nu-command/tests/: main.rs
crates/nu-config/: Cargo.toml
crates/nu-config/src/: color_config.rs  lib.rs
crates/nu-dataframe/: Cargo.toml
crates/nu-dataframe/src/: conversion.rs  custom_value.rs  lib.rs
crates/nu-engine/src/: documentation.rs  env.rs  eval.rs  lib.rs  value.rs
crates/nu-json/src/: ser.rs
crates/nu-parser/: Cargo.toml
crates/nu-parser/src/: errors.rs  flatten.rs  lib.rs  lite_parse.rs  parse_keywords.rs  parser.rs  parser_state.rs  type_check.rs
crates/nu-path/src/: dots.rs  expansions.rs  lib.rs
crates/nu-plugin/: Cargo.toml
crates/nu-plugin/schema/: plugin.capnp
crates/nu-plugin/src/: call_trait.rs  lib.rs  plugin.rs  plugin_call.rs  plugin_capnp.rs
crates/nu-protocol/: Cargo.toml
crates/nu-system/: Cargo.toml
crates/nu-table/: Cargo.toml
crates/nu_plugin_example/: Cargo.toml
crates/nu_plugin_inc/: Cargo.toml
crates/nu_plugin_python/: plugin.py
crates/nu_plugin_query/: Cargo.toml
src/: config_files.rs  eval_file.rs  main.rs  prompt_update.rs  reedline_config.rs  repl.rs  tests.rs
src/plugins/: nu_plugin_core_example.rs
src/tests/: test_converters.rs  test_engine.rs  test_table_operations.rs
tests/path/: expand_path.rs
(+297 files in other folders)
